# CourseWork

./: CMakeLists.txt  README.md
src/: main.cpp  solver.cpp  solver.h
tests/: solver_test.h
